# winx-code-agent

./: .gitignore  Cargo.toml  LICENSE  README.md  README_OPENAI.md  rust-toolchain.toml
.github/: dependabot.yml  renovate.json
.github/workflows/: ci.yml  codeql.yml  publish.yml  release.yml
examples/: rl_demo.rs
src/: error.rs  error_handling.rs  lib.rs  logging.rs  main.rs  mcp_compat.rs  server.rs
src/bash/: mod.rs  screen_manager.rs  security.rs  state.rs
src/bash/runner/: mod.rs
src/cache/: mod.rs
src/code/: bootstrap.rs  manager.rs  mod.rs  project_analyzer.rs  refactoring_engine.rs  semantic_analyzer.rs  static_analyzer.rs  symbol.rs  syntax_checker.rs  vibe_agent.rs
src/code/analysis/: mod.rs  semantic.rs  static_analyzer.rs  syntax.rs
src/code/knowledge/: cache.rs  mod.rs  provider.rs
src/code/refactoring/: engine.rs  mod.rs
src/commands/: bash.rs  edit_command.rs  files.rs  language.rs  localized_descriptions.rs  mod.rs  sql.rs  terminal.rs  thinking.rs  tools.rs  vibe_code.rs
src/config/: config.rs  config_loader.rs  mod.rs  project_config.rs  serena_compat.rs
src/core/: agent.rs  config.rs  contextual_memory.rs  i18n.rs  macros.rs  memory.rs  mod.rs  state.rs  task.rs  types.rs
src/core/i18n/: descriptions.rs  language.rs  mod.rs
src/diff/: checkpoint.rs  edit.rs  fuzzy_search.rs  git.rs  large_file.rs  mod.rs  operations.rs  search_replace.rs  search_replace_enhanced.rs
src/file/: mod.rs  operations.rs  repository.rs  syntax_checker.rs
src/file/search_replace/: mod.rs
src/integrations/: openai.rs
src/lsp/: client.rs  mod.rs  server.rs  symbol.rs  types.rs  utils.rs
src/plugins/: manager.rs  mod.rs  wasm.rs
src/reinforcement/: action.rs  bellman.rs  mod.rs  q_learning.rs  reward.rs  state.rs  tool_selection.rs
src/security/: mod.rs
src/semantic/: analyzer.rs  mdl.rs  mod.rs
src/sql/: connection.rs  mod.rs  query.rs
src/thinking/: mod.rs  sequential.rs  task_adherence.rs
src/tools/: bash_command.rs  context_save.rs  file_operations.rs  initialize.rs  mod.rs  semantic_code.rs  token_economy.rs
src/utils/: ansi_filter.rs  concurrency.rs  directory_tree.rs  error_handling.rs  fs.rs  mod.rs  path_importance.rs  paths.rs
