[package]
name = "winx-code-agent"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Maia"]
description = "A performant code agent written in Rust"
license = "MIT"

# Feature flags
[features]
default = []
syntax_validation = [] # Habilita validação de sintaxe usando tree-sitter

[dependencies]
# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
rusqlite = { version = "0.34.0", features = ["bundled"] }

# OpenAI
async-openai = "0.28.1"

# Shell and terminal interaction
once_cell = "1.8"
sha2 = "0.10"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Model Context Protocol dependencies
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["client", "server", "macros", "transport-child-process", "transport-io"] }
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client and date/time handling
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }


# For file operations and diff/edit
similar = "2.2"
regex = "1.10"
glob = "0.3"
globset = "0.4.10"
tree-sitter = "0.25.3"
dirs = "6.0.0"
tempfile = "3.19.1"
lazy_static = "1.4.0"
rayon = "1.10.0"
async-trait = "0.1.88"
